# Coding-Projects

./: INPROGGRESS.md  README.md  test.c  test.out
Applications/Spotify Overview/: plan.md
Class-Projects/CSC 1200/My Version/: Lab-01.py  MyProject-1.py
Class-Projects/CSC 1200/Submitted Version/: Project-1.py  Project-2.py  lab1-student.py  lab2-student.py  lab3-student.py  lab4-student.py  lab5-student.py
Class-Projects/Coding-III/C#/: notes.md
Class-Projects/Coding-III/Models/: trefoil.blend  trefoil.blend1
Class-Projects/Coding-III/Python/: 2024-25-01-01-01.py  2024-25-01-01-02.py  2024-25-01-01-03.py  2024-25-01-01-04(waites).py  (+1 more)
Rust-Advanced-Engineering/: Cargo.toml
Rust/Embedded-Rust/: readme.md
Rust/Embedded-Rust/Morse-Coder/: Cargo.toml
Rust/Embedded-Rust/Morse-Coder/src/: main.rs
Rust/Rust-Reverse-Engineering-CTF/: README.md
Rust/src/: main.rs
Software-Development/: node.js
Software-Development/C++/: FizzBuzz.cpp  FizzBuzz.out
Software-Development/Rust/: notes.md
Web-Development/: McDonald's-Email-Unsubscriber.js  powerschool-copy.html
Web-Development/Animations/: Dynamic-Background.html  Rotating-Cube.html
Web-Development/Apalacti/: index.html
Web-Development/Expression-To-Words/: index.html  script.js  style.css
Web-Development/Google-Phisher/: style.css
Web-Development/Pixel-Art-Website/: index.html  script.js  styles.css
Web-Development/Plinko Gambling/: classes.js  index.html  script.js  style.css
Web-Development/Resume Website/: index.html  notes.md
Web-Development/SVG Fonts/: script.js  style.css
(+123 files in other folders)
